--- a/ai.symfony.com/templates/_header.html.twig
+++ b/ai.symfony.com/templates/_header.html.twig
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="https://symfony.com/doc/current/ai/index.html">Documentation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Demos</a>
+                        <a class="nav-link" href="https://github.com/symfony/ai-demo">Demos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://symfony.com/doc/current/ai/cookbook/index.html">Cookbook</a>
