Animate model name in code example

--- a/ai.symfony.com/templates/_header.html.twig
+++ b/ai.symfony.com/templates/_header.html.twig
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container py-3">
             <a class="navbar-brand" href="{{ path('homepage') }}">
-                {{ ux_icon('logos:symfony-ai', {width: 'auto', height: 64}) }}
+                {{ ux_icon('logos:symfony-ai', {width: 225, height: 64}) }}
             </a>
 
             <button
