--- a/ai.symfony.com/templates/homepage.html.twig
+++ b/ai.symfony.com/templates/homepage.html.twig
@@ -22,7 +22,7 @@
                                 {{ ux_icon('tabler:arrow-up-right', {width: 24, height: 24, class: 'ms-2'}) }}
                             </a>
                             <a href="https://symfony.com/doc/current/ai/bundles/mcp-bundle.html" class="mt-3 mt-sm-0 ms-lg-4 btn btn-outline-light btn-lg px-4 d-flex align-items-center">
-                                Build MCP Server
+                                Build MCP Servers
                                 {{ ux_icon('tabler:arrow-up-right', {width: 24, height: 24, class: 'ms-2'}) }}
                             </a>
                         </div>
@@ -75,7 +75,7 @@
                             </div>
 
                             <a href="https://symfony.com/doc/current/ai/components/platform.html#supported-models-platforms" class="mt-5 fw-semibold small text-decoration-none d-flex align-items-center justify-content-end">
-                                <span>See all supported models</span>
+                                <span>See all models</span>
                                 {{ ux_icon('tabler:arrow-right', {width: 18, height: 18, class: 'ms-1'}) }}
                             </a>
                         </article>
@@ -100,7 +100,7 @@
                             </div>
 
                             <a href="https://symfony.com/doc/current/ai/components/platform.html#supported-models-platforms" class="mt-5 fw-semibold small text-decoration-none d-flex align-items-center justify-content-end">
-                                <span>See all supported platforms</span>
+                                <span>See all platforms</span>
                                 {{ ux_icon('tabler:arrow-right', {width: 18, height: 18, class: 'ms-1'}) }}
                             </a>
                         </article>
@@ -132,7 +132,7 @@
                     </div>
 
                     <div class="col-md-6 col-lg-3">
-                        <h2 class="ff-title fw-bold h4 mb-4 mt-5 mt-lg-0 text-center">Tools integration</h2>
+                        <h2 class="ff-title fw-bold h4 mb-4 mt-5 mt-lg-0 text-center">Built-in Tools</h2>
                         <article class="sf-ai-card sf-ai-card-hover sf-ai-card-hover-dark p-3 p-lg-4">
                             <div class="sf-ai-card-body sf-ai-logo-grid">
                                 <span class="logo-pill">
