--- a/ai.symfony.com/assets/styles/app.css
+++ b/ai.symfony.com/assets/styles/app.css
@@ -215,13 +215,14 @@ button#themeToggle {
     color: white;
 }
 
-.demo-blog .demo-icon { background: linear-gradient(180deg, #433F77, #C43BC2); }
-.demo-youtube .demo-icon { background: linear-gradient(180deg, #C05920, #CF781A); }
-.demo-wikipedia .demo-icon { background: linear-gradient(180deg, #1CA574, #56AB48); }
-.demo-crop .demo-icon { background: linear-gradient(180deg, #85A72B, #97BC43); }
 .demo-audio .demo-icon { background: linear-gradient(180deg, #42DEEE, #7069B0); }
-.demo-video .demo-icon { background: linear-gradient(180deg, #3B9D87, #35A781); }
+.demo-blog .demo-icon { background: linear-gradient(180deg, #433F77, #C43BC2); }
+.demo-crop .demo-icon { background: linear-gradient(180deg, #85A72B, #97BC43); }
+.demo-recipe .demo-icon { background: linear-gradient(180deg, #83A659, #71BCB8); }
 .demo-turbo .demo-icon { background: linear-gradient(180deg, #E94E77, #D68189); }
+.demo-video .demo-icon { background: linear-gradient(180deg, #3B9D87, #35A781); }
+.demo-wikipedia .demo-icon { background: linear-gradient(180deg, #1CA574, #56AB48); }
+.demo-youtube .demo-icon { background: linear-gradient(180deg, #C05920, #CF781A); }
 
 .footer-meta {
     font-size: 0.8rem;
